--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -169,9 +169,6 @@
   <data name="глаз" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\глаз.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="game_name" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\game_name1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="authorization" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\authorization.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -193,6 +190,9 @@
   <data name="wooden_panel1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\wooden_panel2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="authorization_panel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\authorization_panel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="light_theme" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\light_theme.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -211,16 +211,22 @@
   <data name="sound_yes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sound_yes1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="cross_exit" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cross_exit1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="game_name" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\game_name1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Hog4_standing" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Hog4_standing.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cross_exit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cross_exit1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="settings" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\settings.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="platform_cl_dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\platform_cl_dark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="registration_panel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\registration_panel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
